Fix spacing issues

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,4 +7,5 @@
 	max-width: 45em;
 	padding-left: 1em;
 	padding-right: 1em;
+  text-align: start;
 }
